--- a/briar-android/src/main/res/values-hu/strings.xml
+++ b/briar-android/src/main/res/values-hu/strings.xml
@@ -443,4 +443,11 @@ Vigyázat: Ez végleg törli az identitásait, kapcsolatait és üzeneteit</stri
   <string name="lock_unlock_password">Jelszó használata</string>
   <string name="lock_is_locked">A Briar zárolt</string>
   <string name="lock_tap_to_unlock">Érintse meg a zárolás feloldásához</string>
+  <!--Screenshots-->
+  <!--This is a name to be used in screenshots. Feel free to change it to a local name.-->
+  <!--This is a name to be used in screenshots. Feel free to change it to a local name.-->
+  <!--This is a name to be used in screenshots. Feel free to change it to a local name.-->
+  <!--This is a message to be used in screenshots. Please use the same translation for Bob!-->
+  <!--This is a message to be used in screenshots. Please use the same translation for Alice!-->
+  <!--This is a message to be used in screenshots.-->
 </resources>
