--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
 	<string name="app_name" translatable="false">Briar</string>
 	<string name="app_package" translatable="false">org.briarproject.briar.android</string>
@@ -501,6 +501,5 @@
 	<string name="screenshot_message_2">Hi Alice! Thanks for telling me about Briar!</string>
 	<!-- This is a message to be used in screenshots. -->
 	<string name="screenshot_message_3">No problem, hope you like it 😀</string>
-
 
 </resources>
